platform/kubernetes/apps/sample-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  namespace: spm
  labels:
    app.kubernetes.io/name: sample-service
    app.kubernetes.io/part-of: spm
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sample-service
  ports:
    - name: http
      appProtocol: HTTP
      port: 80
      targetPort: http
